--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,16 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PORT: 5432
       POSTGRES_DB: pg_db
+      POSTGRES_HOST_AUTH_METHOD: trust
     ports:
       - 5432:5432
     volumes:
       - postgres:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
   pgadmin:
     image: dpage/pgadmin4:4.23
     environment:
@@ -24,7 +30,16 @@ services:
     volumes:
       - pgadmin:/var/lib/pgadmin
     depends_on:
-      - postgres
+     - postgres
+  flask:
+    build: .
+    ports:
+      - 5000:5000
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      - SECRET_KEY="YOUR SECRET KEY HERE"
 volumes:
   postgres:
   pgadmin:
