--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ version: '3.9'
 
 services:
   postgres:
-    image: postgres:12.3-alpine
+    build:
+      context: .
+      dockerfile: Dockerfile.postgres
     restart: always
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
       POSTGRES_PORT: 5432
-      POSTGRES_DB: pg_db
+      POSTGRES_DB: postgres
       POSTGRES_HOST_AUTH_METHOD: trust
     ports:
       - 5432:5432
